# tauri-plugin-configurate

./: .gitignore  .oxlintrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  commands.md  package.json  rollup.config.js  tsconfig.build.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
examples/tauri-app/: .npmrc  README.md  package.json  pnpm-lock.yaml  vite.config.js
examples/tauri-app/src/: App.svelte  style.css
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: configurate.ts  index.test.ts  index.ts  provider.ts  schema-utils.ts  schema.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: export_config.toml  import_config.toml  load_all.toml  patch_all.toml
permissions/schemas/: schema.json
src/: commands.rs  config.rs  desktop.rs  dotpath.rs  error.rs  keyring_store.rs  lib.rs  locker.rs  mobile.rs  models.rs  storage.rs  watcher.rs
