[package]
name = "tauri-plugin-configurate"
version = "0.1.0"
authors = ["Crysta1221"]
description = "A Tauri v2 plugin for type-safe application configuration management."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-configurate"

[dependencies]
tauri = { version = "2.10.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
thiserror = "2"
chacha20poly1305 = "0.10"
rand = "0.8"
sha2 = "0.10"

[build-dependencies]
tauri-plugin = { version = "2.5.3", features = ["build"] }

[dev-dependencies]
tempfile = "3"
