[package]
name = "tauri-plugin-configurate"
version = "0.3.1"
authors = ["Crysta1221"]
description = "Tauri v2 plugin for type-safe application configuration management."
edition = "2021"
rust-version = "1.77.2"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Crysta1221/tauri-plugin-configurate"
homepage = "https://github.com/Crysta1221/tauri-plugin-configurate"
keywords = ["tauri", "tauri-plugin", "config", "keyring", "configuration"]
categories = ["config", "filesystem"]
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-configurate"

[dependencies]
tauri = { version = "2.10.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
keyring = { version = "3.6.3", features = [
  "windows-native",
  "apple-native",
  "sync-secret-service",
] }
thiserror = "2"
chacha20poly1305 = "0.10.1"
rand = "0.10"
sha2 = "0.10"
rusqlite = { version = "0.38", features = ["bundled"] }

[build-dependencies]
tauri-plugin = { version = "2.5.4", features = ["build"] }

[dev-dependencies]
tempfile = "3"
