[package]
name = "tauri-plugin-configurate"
version = "0.4.2"
authors = ["Crysta1221"]
description = "Tauri v2 plugin for type-safe application configuration management."
edition = "2021"
rust-version = "1.77.2"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Crysta1221/tauri-plugin-configurate"
homepage = "https://github.com/Crysta1221/tauri-plugin-configurate"
keywords = ["tauri", "tauri-plugin", "config", "keyring", "configuration"]
categories = ["config", "filesystem"]
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-configurate"

[dependencies]
tauri = { version = "2.10.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
keyring = { version = "3.6.3", features = [
  "windows-native",
  "apple-native",
  "sync-secret-service",
] }
thiserror = "2"
chacha20poly1305 = "0.10.1"
rand = "0.10"
sha2 = "0.10"
argon2 = "0.5"
rusqlite = { version = "0.38", features = ["bundled"] }
toml = "0.8"
notify-debouncer-mini = "0.4"
zeroize = "1.8"

[build-dependencies]
tauri-plugin = { version = "2.5.4", features = ["build"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
# LTO eliminates dead code across crate boundaries; important for a plugin that
# ships as part of a Tauri binary bundle.
lto = true
# Single codegen unit maximises inlining and whole-program optimisation at the
# cost of longer compile times.  Acceptable for release builds.
codegen-units = 1
# Optimise for binary size ("s") since Tauri bundles the plugin; use "3" if
# raw throughput matters more than download size.
opt-level = "s"
# Strip debug symbols from the release binary.
strip = true
